update html5 audio

--- a/casestudies/110/casestudy/www/layout/case_id_110_id_757.html
+++ b/casestudies/110/casestudy/www/layout/case_id_110_id_757.html
@@ -1,44 +1,31 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Studio or Independent? | Higher Truth or Just the Facts? Hell and Back Again
-  </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
+  <head>
+    <title>Studio or Independent? | Higher Truth or Just the Facts? Hell and Back Again
+    </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <style type="text/css" media="all">@import "css_global/book/book.css";</style>
+    <style type="text/css" media="all">@import "css_global/node/node.css";</style>
+    <style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
+    <style type="text/css" media="all">@import "css_global/system/system.css";</style>
+    <style type="text/css" media="all">@import "css_global/user/user.css";</style>
+    <style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
+    <style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
+    <style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
+    <script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
+    <script type="text/javascript" src="js/img_assist.js"></script>
+    <script type="text/javascript" src="js/audioimage.js"></script>
+    <script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
+    <script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
+    <script type="text/javascript" src="swfobject.js"></script> 
+    <script type="text/javascript">
         var GB_ROOT_DIR = "com/greybox/";
     </script>
-
     <script type="text/javascript" src="com/greybox/AJS.js"></script>
     <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
     <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
     <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
     <script type="text/javascript">
       var GB_ANIMATION = true;
       $(document).ready(function(){
@@ -49,170 +36,66 @@
         });
       });
     </script>
-
-
-<script type="text/javascript">
-    $(function() {
+    <script type="text/javascript">
+      $(function() {
         $('a.media').media();
-    });
-</script>
+      });
+    </script>
 
-<style>
-#main .title
-{
-	color: ;
-	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
-}
+    <style>
+      #main .title
+      {
+      	color: ;
+      	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
+      }
+      #main a,
+      #sidebar-left a,
+      #sidebar-right a
+      {
+    	color: ;
+      }
+      #media 
+      {
+          font-style:italic;
+      }
+    </style>
+  </head>
 
-#main a,
-#sidebar-left a,
-#sidebar-right a
-{
-	color: ;
-}
-
-#media {
-font-style:italic;
-}
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/110/18001672HigherTruth2.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_110.html" title="Home"><span>Studio or Independent?</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
+  <body>
+    <div id="container">
+      <!-- Banner header -->
+      <div id="header" style="background: url('../../files/global/110/18001672HigherTruth2.jpg') top left no-repeat;">
+        <table border="0" cellspacing="0" cellpadding="0">
+          <tr>
+            <td style="width: 100%;">
+              <h1 class='site-name'><a href="case_id_110.html" title="Home"><span>Studio or Independent?</span></a></h1>
+            </td>
+            <td class="kcsi_logo">
+              <a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a>
+            </td>
+          </tr>
+        </table>
+      </div><!-- id="header" -->
+      <div id="pagebody">
+        <!-- Left sidebar -->
+        <div id="sidebar-left">
 		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_110.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_110_id_753.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_110_id_754.html">Documentaries</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_110_id_755.html">From Photojournalist to Filmmaker</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_110_id_756.html">Machine Gun Hill</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  class="active"  href="case_id_110_id_757.html">Studio or Independent?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_110_id_758.html">One Man's (Subjective) Experience</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_110_id_759.html">Partners</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_110_id_760.html">Editing Room</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_110_id_761.html">Nobody Likes Nathan</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
+            <h2 class="title">Sections</h2>
+            <div class="content">
+              <ul class="menu">
+              <li class="leaf"><a  href="case_id_110.html">Title Page</a></li>
+              <li class="leaf"><a  href="case_id_110_id_753.html">Introduction</a></li>
+              <li class="leaf"><a  href="case_id_110_id_754.html">Documentaries</a></li>
+              <li class="leaf"><a  href="case_id_110_id_755.html">From Photojournalist to Filmmaker</a></li>
+              <li class="leaf"><a  href="case_id_110_id_756.html">Machine Gun Hill</a></li>
+              <li class="leaf"><a  class="active"  href="case_id_110_id_757.html">Studio or Independent?</a></li>
+              <li class="leaf"><a  href="case_id_110_id_758.html">One Man's (Subjective) Experience</a></li>
+              <li class="leaf"><a  href="case_id_110_id_759.html">Partners</a></li>
+              <li class="leaf"><a  href="case_id_110_id_760.html">Editing Room</a></li>
+              <li class="leaf"><a  href="case_id_110_id_761.html">Nobody Likes Nathan</a></li>
+              </ul>
+              </div>
+                </div>
 
   <div class="block block-block" id="block-block-1">
     <h2 class="title"></h2>
@@ -226,7 +109,6 @@ font-style:italic;
 </div>
 </div>
 
-
  </div>
 	</div><!-- id="sidebar-left" -->
 	
@@ -235,16 +117,10 @@ font-style:italic;
 	<div id="contentbody" class="three-column" >
 				
 		<div id="main">
-		<div class="breadcrumb"><a href="case_id_110.html">Home</a> 
-		
-		
-		
-		
+		<div class="breadcrumb">
+		<a href="case_id_110.html">Home</a> 
 		</div>		
 		<h1 class="title">Studio or Independent?</h1>
-		
-		
-		
 		<div class="tabs"></div>
 
 		
@@ -277,95 +153,84 @@ font-style:italic;
 <p>
 	In mid-November, they signed a contract and Roast Beef Productions began the process of raising funds for a documentary. &ldquo;That was a really frustrating process: very slow, time consuming, a lot of dead ends. It was a very difficult film to fund because of the subject matter,&rdquo; says Dennis.</p>
 <p>
-	Meanwhile, Dennis went to North Carolina where the Marines of Echo Company were rotating home to their base at Camp Lejeune four months after the offensive he had documented. On November 17, he filmed the Marines&rsquo; emotional reunion with their families. At that point, says Lerner, &ldquo;the film was very much a work in progress.&quot;<a href="case_id_110_id_757.html#_ftn2" name="_ftnref2" title=""><sup>[10]</sup></a></p>
+	Meanwhile, Dennis went to North Carolina where the Marines of Echo Company were rotating home to their base at Camp Lejeune four months after the offensive he had documented. On November 17, he filmed the Marines&rsquo; emotional reunion with their families. At that point, says Lerner, &ldquo;the film was very much a work in progress.&quot;<a href="case_id_110_id_757.html#_ftn2" name="_ftnref2" title=""><sup>[10]</sup></a>
+	</p>
 <blockquote>
 	<p>
-		We weren&rsquo;t really sure what direction it would ultimately take. Fundamentally it was a project made by someone who never really considered themselves to be a filmmaker, someone who wasn&rsquo;t really working to any kind of form or training or idea about what a film should be.</p>
-	<p>
-		<i>Lerner on the early production stages of the film.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/304/Lerner1.mp3" /></p>
-</blockquote>
-<div>
-	<hr align="left" size="1" width="33%" />
-	<div id="ftn1">
-		<p>
-			<span style="font-size:10px;"><a href="case_id_110_id_757.html#_ftnref1" name="_ftn1" title="">[9]</a>&nbsp;Prix Bayeux-Calvados. See: <a href="http://www.prixbayeux.org/english/?p=57">http://www.prixbayeux.org/english/?p=57</a></span></p>
-		<p>
-			<span style="font-size:10px;"><a href="case_id_110_id_757.html#_ftnref2" name="_ftn2" title="">[10]</a>&nbsp;Author&rsquo;s telephone interview with Michael Lerner on November 1, 2012. All further quotes from Lerner, unless otherwise attributed, are from these interviews.</span></p>
-	</div>
-</div>
-</div>
+		We weren&rsquo;t really sure what direction it would ultimately take. Fundamentally it was a project made by someone who never really considered themselves to be a filmmaker, someone who wasn&rsquo;t really working to any kind of form or training or idea about what a film should be.
+		</p>
+                  	<p>
+                  	  <i>Lerner on the early production stages of the film.</i><br />
+                  	  <!-- <img alt="" border="0" class="audiofile" src="../../files/audios/304/Lerner1.mp3" /> -->
+                  	  <audio controls>
+                        <source src="../../files/audios/304/Lerner1.mp3" type="audio/mpeg">
+                      </audio>
+                  	</p>
+                  </blockquote>
+                  <div>
+	                 <hr align="left" size="1" width="33%" />
+	                  <div id="ftn1">
+		                <p>
+			              <span style="font-size:10px;"><a href="case_id_110_id_757.html#_ftnref1" name="_ftn1" title="">[9]</a>&nbsp;Prix Bayeux-Calvados. See: <a href="http://www.prixbayeux.org/english/?p=57">http://www.prixbayeux.org/english/?p=57</a></span>
+			            </p>
+		                <p>
+			              <span style="font-size:10px;"><a href="case_id_110_id_757.html#_ftnref2" name="_ftn2" title="">[10]</a>&nbsp;Author&rsquo;s telephone interview with Michael Lerner on November 1, 2012. All further quotes from Lerner, unless otherwise attributed, are from these interviews.</span>
+			            </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
+                    <a href="case_id_110_id_756.html" class="page-previous" title="Go to previous page">&#171;&#160;Machine Gun Hill</a>
+                    <a href="case_id_110_id_758.html" class="page-next" title="Go to next page">One Man's (Subjective) Experience&#160;&#187;</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!-- id="main" -->
+        </div><!-- id="contentbody" -->
 
-
-<div class="book-navigation" style="clear:both"><div class="page-links clear-block">
-
-
-<a href="case_id_110_id_756.html" class="page-previous" title="Go to previous page">&#171;&#160;Machine Gun Hill</a>
-
-<a href="case_id_110_id_758.html" class="page-next" title="Go to next page">One Man's (Subjective) Experience&#160;&#187;</a>
-
-</div>
-</div></div>
-
-      </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
+        <!-- Right sidebar for Bios -->
+	    <div id="sidebar-right">
 		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
+            <h2 class="title">Biographies</h2>
+            <div class="content">
+              <ul class="menu">
+                <li class="leaf"><a  href="case_id_110_id_218_c_bio.html">Danfung&nbsp;Dennis</a></li>
+                <li class="leaf"><a  href="case_id_110_id_219_c_bio.html">Fiona&nbsp;Otway</a></li>
+                <li class="leaf"><a  href="case_id_110_id_220_c_bio.html">Mike&nbsp;Lerner</a></li>
+              </ul>
+            </div>
+          </div>
+        </div><!-- id="sidebar-right" -->
+        <div class="visualclear"></div>
+      </div><!-- id="pagebody" -->
 
-<li class="leaf"><a  href="case_id_110_id_218_c_bio.html">Danfung&nbsp;Dennis</a></li>
-
-<li class="leaf"><a  href="case_id_110_id_219_c_bio.html">Fiona&nbsp;Otway</a></li>
-
-<li class="leaf"><a  href="case_id_110_id_220_c_bio.html">Mike&nbsp;Lerner</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-51144540-10");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+      <div id="footer">
+	    <div id="footer-inner">
+	      <div class="block block-menu" id="block-menu-66">
+            <h2 class="title">System menu</h2>
+            <div class="content">
+              <ul class="menu">
+                <li class="leaf">
+                  <a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div><!-- id="footer-inner" -->
+      </div><!-- id="footer" -->
+    </div><!-- id="container" -->
+    
+    <script type="text/javascript">
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+    try {
+        var pageTracker = _gat._getTracker("UA-51144540-10");
+        pageTracker._trackPageview();
+        } 
+    catch(err) {}
+    </script>
+  </body>
 </html>
