--- a/casestudies/110/casestudy/www/layout/case_id_110_id_760.html
+++ b/casestudies/110/casestudy/www/layout/case_id_110_id_760.html
@@ -275,7 +275,11 @@ font-style:italic;
 		We essentially are suggesting that now you&rsquo;re entering his thoughts and you&rsquo;re entering his memories, and his memories have been triggered by his looking at these video games and he&rsquo;s comparing it to his actual experience of war. So that&rsquo;s where we&rsquo;re starting to step into his mind.</p>
 	<p>
 		<i>Dennis describes the scene in Wal-Mart.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/308/Dennis1.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/308/Dennis1.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/308/Dennis1.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 <p>
 	It was possible that in that moment Harris was actually thinking only about the video game. In the context of the film, however, the moment became a key pivot point. It established the flashback structure and cued the audience to consider the inner experience of a wounded combat veteran who had recently returned home. The scene also encapsulated Dennis&rsquo; message about how war was depicted. &ldquo;We wanted that world of Wal-Mart, with all these false representations of war everywhere on sale and on the screens, to fade away,&rdquo; says Dennis. &ldquo;Then his memories of those real experiences replace them.&rdquo;</p>
