--- a/casestudies/110/casestudy/www/layout/case_id_110_id_761.html
+++ b/casestudies/110/casestudy/www/layout/case_id_110_id_761.html
@@ -257,7 +257,11 @@ font-style:italic;
 <blockquote>
 	<p>
 		<i>Otway on conveying Harris&#39; mental state.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/306/Fiona1.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/306/Fiona1.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/306/Fiona1.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 <center>
 	<p>
