--- a/casestudies/111/casestudy/www/layout/case_id_111_id_766.html
+++ b/casestudies/111/casestudy/www/layout/case_id_111_id_766.html
@@ -295,7 +295,11 @@ font-style:italic;
 <blockquote>
 	<p>
 		<i>Hibbard on getting </i><i>maximum exposure for each story.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/311/Rita&#32;text&#32;clip.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/311/Rita&#32;text&#32;clip.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/311/Rita&#32;text&#32;clip.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 <p>
 	Moreover, the sealant story was not successful as a business venture. <em>InvestigateWes</em>t had negotiated a freelance fee of $750, which failed to cover even the cost of production. McClure acknowledges that &ldquo;we sold the story for far less than it probably was worth,&rdquo; although he counters that &ldquo;the benefits, to society and to <em>InvestigateWest</em> have been huge.&rdquo; Regardless, the experience was confirmation that freelance market rates for in-depth journalism were insufficient to support a venture like IW. Foundation support and other income would have to cover the balance.</p>
