--- a/casestudies/111/casestudy/www/layout/case_id_111_id_768.html
+++ b/casestudies/111/casestudy/www/layout/case_id_111_id_768.html
@@ -301,7 +301,11 @@ font-style:italic;
 		This is open-minded inquiry into a complex topic, where the person&rsquo;s actually taking the time to go open the can of worms and pull them out.&nbsp; The whole thing early on was, just be transparent about where you&rsquo;re getting your money. What we try to do here is find funders whose interests coincide with what we want to do.</p>
 	<p>
 		<i>McClure explains how funding relates to reporting.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/310/McClure&#32;text&#32;clip.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/310/McClure&#32;text&#32;clip.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/310/McClure&#32;text&#32;clip.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 <div>
 	<hr align="left" size="1" width="33%" />
