--- a/casestudies/111/casestudy/www/layout/case_id_111_id_769.html
+++ b/casestudies/111/casestudy/www/layout/case_id_111_id_769.html
@@ -277,7 +277,11 @@ font-style:italic;
 		We wouldn&rsquo;t have known until we actually got into doing this that we have a really nice fit with broadcast audiences. We each bring something to the table that the other really doesn&rsquo;t have. They can film stuff and we can report stuff. And while they have reporters, they don&rsquo;t have enough of their own reporting manpower to do what we do.</p>
 	<p>
 		<i>Hear Smith on why it made sense to work with a broadcast outlet.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/313/Smith&#32;text&#32;clip.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/313/Smith&#32;text&#32;clip.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/313/Smith&#32;text&#32;clip.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 <p>
 	Mid-August 2010 saw the results of another business experiment: a piece by van der Voo on cruise ship pollution. The story played across more than a dozen outlets, including the<em>Spokane Spokesman-Review</em>, the<em>Portland Oregonian</em>, and <em>SeattlePI.com</em>, the post-<em>Post-Intelligencer</em> website. &nbsp;KCTS ran a segment on the topic and interviewed van der Voo. &nbsp;</p>
