--- a/casestudies/111/casestudy/www/layout/case_id_111_id_771.html
+++ b/casestudies/111/casestudy/www/layout/case_id_111_id_771.html
@@ -293,7 +293,11 @@ font-style:italic;
 		The board voiced their support for the organization, but when you&rsquo;re a three-year-old organization and a founder leaves and your cash in the bank is running out and the foundations are saying we need to see something different, even given the accomplishments of the journalism, I think there was a clear sense in the room that we weren&rsquo;t yet on a path to sustainability. We had less than six months of cash on hand.</p>
 	<p>
 		<i>Alcorn explains the challenges facing the board.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/316/Alcorn&#32;text&#32;clip.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/316/Alcorn&#32;text&#32;clip.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/316/Alcorn&#32;text&#32;clip.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 </div>
 
