--- a/casestudies/112/casestudy/www/layout/case_id_112.html
+++ b/casestudies/112/casestudy/www/layout/case_id_112.html
@@ -1,18 +1,10 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
 <head>
-  <title>Credible Voice: WHO-Beijing and the SARS Crisis | Credible Voice: WHO-Beijing and the SARS Crisis
-  </title>
- 
+  <title>Credible Voice: WHO-Beijing and the SARS Crisis | Credible Voice: WHO-Beijing and the SARS Crisis</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
+<style type="text/css" media="all">@import "css_global/book/book.css";</style>
 <style type="text/css" media="all">@import "css_global/node/node.css";</style>
 <style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
 <style type="text/css" media="all">@import "css_global/system/system.css";</style>
@@ -26,20 +18,14 @@
 <script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
 <script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
 <script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
+<script type="text/javascript">
+  var GB_ROOT_DIR = "com/greybox/";
+</script>
+<script type="text/javascript" src="com/greybox/AJS.js"></script>
+<script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
+<script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
+<link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
+<script type="text/javascript">
       var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
@@ -48,9 +34,7 @@
           return false;
         });
       });
-    </script>
-
-
+</script>
 <script type="text/javascript">
     $(function() {
         $('a.media').media();
@@ -95,204 +79,57 @@ font-style:italic;
 	</tr>
 
 </table>
-      
-      
 </div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
 
 <div id="pagebody">
 
 	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
+<!-- Left sidebar -->
+<div id="sidebar-left">
+  <div class="block block-menu" id="block-menu-63">
     <h2 class="title">Sections</h2>
     <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  class="active"  href="case_id_112.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_775.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_776.html">Brief History of WHO</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_777.html">WHO-Beijing</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_778.html">Email from Guangdong</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_779.html">Evidence mounts</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_780.html">Media Relations</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_781.html">Organizing for Crisis</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_782.html">Mission #1</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_783.html">Virulent disease</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_784.html">Spinning the Wheels</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_785.html">Getting to Guangdong</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_786.html">The Dam Breaks</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_787.html">Mission in Beijing</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_788.html">Intervention at what price?</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
+      <ul class="menu">
+        <li class="leaf"><a  class="active"  href="case_id_112.html">Title Page</a></li>
+        <li class="leaf"><a  href="case_id_112_id_775.html">Introduction</a></li>
+        <li class="leaf"><a  href="case_id_112_id_776.html">Brief History of WHO</a></li>
+        <li class="leaf"><a  href="case_id_112_id_777.html">WHO-Beijing</a></li>
+        <li class="leaf"><a  href="case_id_112_id_778.html">Email from Guangdong</a></li>
+        <li class="leaf"><a  href="case_id_112_id_779.html">Evidence mounts</a></li>
+        <li class="leaf"><a  href="case_id_112_id_780.html">Media Relations</a></li>
+        <li class="leaf"><a  href="case_id_112_id_781.html">Organizing for Crisis</a></li>
+        <li class="leaf"><a  href="case_id_112_id_782.html">Mission #1</a></li>
+        <li class="leaf"><a  href="case_id_112_id_783.html">Virulent disease</a></li>
+        <li class="leaf"><a  href="case_id_112_id_784.html">Spinning the Wheels</a></li>
+        <li class="leaf"><a  href="case_id_112_id_785.html">Getting to Guangdong</a></li>
+        <li class="leaf"><a  href="case_id_112_id_786.html">The Dam Breaks</a></li>
+        <li class="leaf"><a  href="case_id_112_id_787.html">Mission in Beijing</a></li>
+        <li class="leaf"><a  href="case_id_112_id_788.html">Intervention at what price?</a></li>
+      </ul>
+    </div>
+  </div>
   <div class="block block-block" id="block-block-1">
     <h2 class="title"></h2>
-
+    <div class="content">
+      <div class="content">
+        <ul class="menu">
+          <li class="printpdf">
+            <a href="../../files/global/112/WHO&#32;SARS_wm.pdf" target="_blank">Download this case as a PDF</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div><!-- id="sidebar-left" -->
 	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/112/WHO&#32;SARS_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="two-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_112.html">Home</a> 
-		
-		
-		
-		
-		</div>		
-		<h1 class="title">Credible Voice: WHO-Beijing and the SARS Crisis</h1>
-		
-		
-		
+<!-- Main content of page -->
+<div id="contentbody" class="two-column" >
+  <div id="main">
+    <div class="breadcrumb">
+      <a href="case_id_112.html">Home</a> 
+    </div>		
+    <h1 class="title">Credible Voice: WHO-Beijing and the SARS Crisis</h1>
 		<div class="tabs"></div>
-
-		
 	  <div class="node">
     <span class="taxonomy"></span>
     <div class="content"><p>
@@ -310,34 +147,23 @@ font-style:italic;
 	<strong>Credits</strong></p>
 <div style="margin-left:4.3pt;">
 	<p>
-		<span style="font-size:12px;"><em>This case was written by Kirsten Lundberg, Director, Case Consortium @ Columbia, for the Mailman School of Public Health. The faculty sponsor was the John Snow Professor of Epidemiology and Professor of Neurology and Pathology Ian Lipkin of Mailman. (0313)</em></span></p>
+		<span style="font-size:12px;"><em>This case was written by Kirsten Lundberg, Director, Case Consortium @ Columbia, for the Mailman School of Public Health. The faculty sponsor was the John Snow Professor of Epidemiology and Professor of Neurology and Pathology Ian Lipkin of Mailman. (0313)</em></span>
+	</p>
 </div>
-<p>
-	Copyright &copy; 2013 The Mailman School of Public Health and Columbia University. All Rights Reserved.</p>
-<div>
-	<strong>For further information:</strong></div>
-<div>
-	E-mail: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a></div>
-<div>
-	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
-
-
-<div class="book-navigation" style="clear:both"><div class="page-links clear-block">
-
-
+<p>	Copyright &copy; 2013 The Mailman School of Public Health and Columbia University. All Rights Reserved.</p>
+<div>	<strong>For further information:</strong></div>
+<div>	E-mail: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a></div>
+<div>	Website:&nbsp;<a href="http://casestudies.ccnmtl.columbia.edu/" target="_blank">https://casestudies.ccnmtl.columbia.edu</a></div>
+<div class="book-navigation" style="clear:both">
+<div class="page-links clear-block">
 <a href="case_id_112_id_775.html" class="page-next" title="Go to next page">Introduction&#160;&#187;</a>
-
 </div>
-</div></div>
-
-      </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-	
-	<div class="visualclear"></div>
-
-
+</div>
+</div>
+</div>
+</div><!-- id="main" -->
+</div><!-- id="contentbody" -->
+<div class="visualclear"></div>
 </div><!-- id="pagebody" -->
 
 
