--- a/casestudies/112/casestudy/www/layout/case_id_112_id_778.html
+++ b/casestudies/112/casestudy/www/layout/case_id_112_id_778.html
@@ -1,44 +1,30 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Email from Guangdong | Credible Voice: WHO-Beijing and the SARS Crisis
-  </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
+  <head>
+    <title>Evidence mounts | Credible Voice: WHO-Beijing and the SARS Crisis</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <style type="text/css" media="all">@import "css_global/book/book.css";</style>
+    <style type="text/css" media="all">@import "css_global/node/node.css";</style>
+    <style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
+    <style type="text/css" media="all">@import "css_global/system/system.css";</style>
+    <style type="text/css" media="all">@import "css_global/user/user.css";</style>
+    <style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
+    <style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
+    <style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
+    <script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
+    <script type="text/javascript" src="js/img_assist.js"></script>
+    <script type="text/javascript" src="js/audioimage.js"></script>
+    <script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
+    <script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
+    <script type="text/javascript" src="swfobject.js"></script> 
+    <script type="text/javascript">
+      var GB_ROOT_DIR = "com/greybox/";
+      </script>
     <script type="text/javascript" src="com/greybox/AJS.js"></script>
     <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
     <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
     <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
     <script type="text/javascript">
       var GB_ANIMATION = true;
       $(document).ready(function(){
@@ -49,14 +35,11 @@
         });
       });
     </script>
-
-
-<script type="text/javascript">
-    $(function() {
+    <script type="text/javascript">
+      $(function() {
         $('a.media').media();
-    });
-</script>
-
+      });
+    </script>
 <style>
 #main .title
 {
@@ -71,12 +54,10 @@
 	color: ;
 }
 
-#media {
-font-style:italic;
+#media 
+{
+    font-style:italic;
 }
-
-
-
 </style>
 </head>
 
