--- a/casestudies/112/casestudy/www/layout/case_id_112_id_787.html
+++ b/casestudies/112/casestudy/www/layout/case_id_112_id_787.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-  <head>
-    <title>Evidence mounts | Credible Voice: WHO-Beijing and the SARS Crisis</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-    <style type="text/css" media="all">@import "css_global/node/node.css";</style>
-    <style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-    <style type="text/css" media="all">@import "css_global/system/system.css";</style>
-    <style type="text/css" media="all">@import "css_global/user/user.css";</style>
-    <style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-    <style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-    <style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-    <script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-    <script type="text/javascript" src="js/img_assist.js"></script>
-    <script type="text/javascript" src="js/audioimage.js"></script>
-    <script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-    <script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-    <script type="text/javascript" src="swfobject.js"></script> 
-    <script type="text/javascript">
-      var GB_ROOT_DIR = "com/greybox/";
-      </script>
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Mission in Beijing | Credible Voice: WHO-Beijing and the SARS Crisis
+  </title>
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -34,14 +61,14 @@
           return false;
         });
       });
-    </script>
-    <script type="text/javascript">
-      $(function() {
+   </script>
+   <script type="text/javascript">
+    $(function() {
         $('a.media').media();
-      });
-    </script>
-<style>
-#main .title
+    });
+   </script>
+   <style>
+    #main .title
 {
 	color: ;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -54,234 +81,171 @@
 	color: ;
 }
 
-#media 
-{
-    font-style:italic;
+#media {
+font-style:italic;
 }
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/112/180-0171Crediblevoicev2.jpeg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_112.html" title="Home"><span>Mission in Beijing</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_112.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_775.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_776.html">Brief History of WHO</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_777.html">WHO-Beijing</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_778.html">Email from Guangdong</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_779.html">Evidence mounts</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_780.html">Media Relations</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_781.html">Organizing for Crisis</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_782.html">Mission #1</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_783.html">Virulent disease</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_784.html">Spinning the Wheels</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_785.html">Getting to Guangdong</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_786.html">The Dam Breaks</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  class="active"  href="case_id_112_id_787.html">Mission in Beijing</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_788.html">Intervention at what price?</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/112/WHO&#32;SARS_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_112.html">Home</a> 
-		
-		
-		
-		
-		</div>		
-		<h1 class="title">Mission in Beijing</h1>
-		
-		
-		
-		<div class="tabs"></div>
-
-		
-	  <div class="node">
-    <span class="taxonomy"></span>
-    <div class="content"><div style="float:center;padding:10px">
-	<img src="../../files/photos/759/800px-Bejingcbd.jpg" style="height: 287px; width: 550px;" /><br />
-	<p class="caption">
-		Beijing<br />
-		Source: <a href="http://commons.wikimedia.org/wiki/File:Bejingcbd.jpg">Wikimedia Commons</a></p>
-</div>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/112/180-0171Crediblevoicev2.jpeg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_112.html" title="Home">
+         <span>
+          Mission in Beijing
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_112.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_775.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_776.html">
+          Brief History of WHO
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_777.html">
+          WHO-Beijing
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_778.html">
+          Email from Guangdong
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_779.html">
+          Evidence mounts
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_780.html">
+          Media Relations
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_781.html">
+          Organizing for Crisis
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_782.html">
+          Mission #1
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_783.html">
+          Virulent disease
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_784.html">
+          Spinning the Wheels
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_785.html">
+          Getting to Guangdong
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_786.html">
+          The Dam Breaks
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_112_id_787.html">
+          Mission in Beijing
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_788.html">
+          Intervention at what price?
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/112/WHO SARS_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_112.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Mission in Beijing
+      </h1>
+      <div class="tabs">
+      </div>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="float:center;padding:10px">
+         <img src="../../files/photos/759/800px-Bejingcbd.jpg" style="height: 287px; width: 550px;"/>
+         <br/>
+         <p class="caption">
+          Beijing
+          <br/>
+          Source:
+          <a href="http://commons.wikimedia.org/wiki/File:Bejingcbd.jpg">
+           Wikimedia Commons
+          </a>
+         </p>
+        </div>
 <p>
 	&nbsp;</p>
 <p>
@@ -303,7 +267,11 @@
 		Working in China, one becomes very careful of protecting sources. One can establish fairly good working relationships with people once they understand that you know the rules: that if you put their name up to a higher level as saying something, they can get into serious trouble.</p>
 	<p>
 		<i>Schnur elaborates on discretion in China.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/321/Schnur&#32;text&#32;clip.mp3" /></p>
+		<!--<img alt="" border="0" class="audiofile" src="../../files/audios/321/Schnur&#32;text&#32;clip.mp3"/>-->
+          <audio controls>
+            <source src="../../files/audios/321/Schnur&#32;text&#32;clip.mp3" type="audio/mpeg">
+          </audio>
+    </p>
 </blockquote>
 <p>
 	Various individuals had called Schnur in recent weeks to report a relative who worked at a hospital with SARS cases, or an acquaintance suddenly taken ill. An expatriate health center had also reported its suspicion of more cases. &ldquo;There were several informal inputs which gave us to believe that the official data was not believable, and that the number of cases was more than we expected,&rdquo; says Schnur. The government on April 14 raised its count of SARS cases in Beijing to 37 (including four deaths)&mdash;but this seemed hardly credible. Schnur had heard unconfirmed numbers as high as 200.</p>
