--- a/casestudies/54/casestudy/www/layout/case_id_54_id_549.html
+++ b/casestudies/54/casestudy/www/layout/case_id_54_id_549.html
@@ -238,6 +238,7 @@ font-style:italic;
          </em>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/122/drummond_sullivan_define_story.mp3"/>-->
+         <audio controls><source src="../../files/audios/122/drummond_sullivan_define_story.mp3" type="audio/mpeg"></audio>
         </p>
         <p class="final">
          As national desk editor, Drummond’s role was to help Sullivan hash out issues as they came up and help her manage her time. A story like this could take as long as a year if Sullivan decided to chase down every lead. It was part of Drummond’s job to help her decide what was worthwhile pursuing and for how long. On rare occasions, Sullivan might spend months working on a story and end up with nothing she could broadcast. Drummond had to decide what risks to take and how to use his resources—staff and production time, as well as money. “There were giant gobs of material here, and that was an initial struggle for Laura in reporting this, to define a story and try to wrestle it into a manageable size,” Drummond says.
