--- a/casestudies/54/casestudy/www/layout/case_id_54_id_550.html
+++ b/casestudies/54/casestudy/www/layout/case_id_54_id_550.html
@@ -290,6 +290,7 @@ font-style:italic;
          </em>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/119/sullivan_car_tour.mp3"/>-->
+         <audio controls><source src="../../files/audios/119/sullivan_car_tour.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
         </p>
